tests/diagnostics/declarations/functions/return_type_mismatch/expect.txt
# exit: 1
input/lib.coppice:2:12: error: return type mismatch: expected int64, got boolean
      return true
             ^
